4678
Section 12.5 of the specification defines an implicit conversion from Scala's Int to Java's Integer, but not the other way.

1A simpler example:
{code}
scala> val i: Int = (2: Integer)
<console>:5: error: type mismatch;
 found   : Integer
 required: Int
       val i: Int = (2: Integer)
                      ^
{code}
